@@ -1,3 +1,10 @@
+Sat Feb 26 07:10:05 2011  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/scalar_scanner.rb: fix parsing timezone's whose
+	  whose format is (+/-)hhmm.  Thanks Gonçalo Silva!
+
+	* test/psych/test_scalar_scanner.rb: test for bug.
+
 Mon Feb 28 13:02:15 2011  Danial Pearce <github@tigris.id.au>
 
 	* lib/tempfile.rb: Fix example file paths in docs for tempfile.
